# templated-exceptions

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
docs/adr/: 0000-record-architecture-decisions.md  0001-use-markdown-architectural-decision-records.md  template.md
docs/source/: conf.py  index.rst
src/templated_exceptions/: __init__.py
tests/: test_import.py  test_jinja2.py  test_pep3101.py
