[tool.poetry]
name = "templated-exceptions"
version = "20.1.0"
description = "Python package to help create verbose exceptions with message instantiated from templates."
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/jlumbroso/templated-exceptions"
repository = "https://github.com/jlumbroso/templated-exceptions"
include = [
    "README.md",
]
keywords = [
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
changelog = "https://github.com/jlumbroso/templated-exceptions/releases"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{36,37,38,39}
[testenv]
requires =
    tox-poetry-dev-dependencies
poetry_add_dev_dependencies = True
commands =
    pytest
"""

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.3.0"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-rtd-theme = "^0.5.0"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-mock = "^3.3.1"
pytest-subtests = "^0.3.2"
pytest-repeat = "^0.9.1"
pytest-randomly = "^3.5.0"
tox = "^3.20.1"
tox-poetry-dev-dependencies = "^0.0.7"
black = "^20.8b1"
pre-commit = "^2.9.3"
safety = "^1.9.0"
mypy = "^0.790"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx-autobuild = "^2020.9.1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.8"
pre-commit-hooks = "^3.4.0"
isort = "^5.7.0"
pyadr = "^0.17.5"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["templated_exceptions"]

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
